samples/_failures_safe/1761321913_563997_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b78d9060.c: In function ‘main’:
./samples/SAFE/__tmp_b78d9060.c:151:16: error: missing terminating " character
  151 |         printf("No valid log entries found or file is
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b78d9060.c:151:9: error: expected expression at end of input
  151 |         printf("No valid log entries found or file is
      |         ^~~~~~
./samples/SAFE/__tmp_b78d9060.c:151:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b78d9060.c:151:9: error: expected declaration or statement at end of input
